Added the poem section too and a few more fixerzzz

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,4 @@
 <!-- wp:template-part {"slug":"header","theme":"zamkai-fse","tagName":"header"} /-->
 <!-- wp:pattern { "slug":"zamkai-fse/hero" } /-->
+ <!-- wp:pattern { "slug":"zamkai-fse/featured-stats" } /-->
+  <!-- wp:pattern { "slug":"zamkai-fse/poem" } /-->
