Added alternate poem section and footer width fixes

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,6 @@
 <!-- wp:template-part {"slug":"header","theme":"zamkai-fse","tagName":"header"} /-->
 <!-- wp:pattern { "slug":"zamkai-fse/hero" } /-->
- <!-- wp:pattern { "slug":"zamkai-fse/featured-stats" } /-->
-  <!-- wp:pattern { "slug":"zamkai-fse/poem" } /-->
+<!-- wp:pattern { "slug":"zamkai-fse/featured-stats" } /-->
+<!-- wp:pattern { "slug":"zamkai-fse/poem" } /-->
+<!-- wp:pattern { "slug":"zamkai-fse/poem-2" } /-->
+<!-- wp:template-part {"slug":"footer","theme":"zamkai-fse","tagName":"footer"} /-->
