--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,5 @@
 <!-- wp:template-part {"slug":"header","theme":"zamkai-fse","tagName":"header"} /-->
-<!-- wp:pattern { "slug":"zamkai-fse/hero" } /-->
-<!-- wp:pattern { "slug":"zamkai-fse/featured-stats" } /-->
-<!-- wp:pattern { "slug":"zamkai-fse/poem" } /-->
-<!-- wp:pattern { "slug":"zamkai-fse/poem-2" } /-->
+ <!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"default"}} -->
+<div class="wp-block-group" style="margin-top:0;margin-bottom:0"> <!-- wp:pattern { "slug":"zamkai-fse/home" } /--> </div>
+<!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","theme":"zamkai-fse","tagName":"footer"} /-->
