--- a/templates/archive.html
+++ b/templates/archive.html
@@ -6,65 +6,21 @@
 <!-- wp:term-description {"textAlign":"center","style":{"elements":{"link":{"color":{"text":"var:preset|color|zk-alt-text"}}},"spacing":{"margin":{"top":"0","bottom":"0"}}},"textColor":"zk-alt-text"} /--></div>
 <!-- /wp:group -->
 
-<!-- wp:columns {"style":{"spacing":{"padding":{"right":"var:preset|spacing|regular","left":"var:preset|spacing|regular"},"blockGap":{"left":"0"}}}} -->
-<div class="wp-block-columns" style="padding-right:var(--wp--preset--spacing--regular);padding-left:var(--wp--preset--spacing--regular)"><!-- wp:column {"width":"25%","style":{"spacing":{"blockGap":"var:preset|spacing|regular","padding":{"right":"var:preset|spacing|x-small","left":"var:preset|spacing|x-small"}}}} -->
+<!-- wp:columns {"style":{"spacing":{"padding":{"right":"var:preset|spacing|regular","left":"var:preset|spacing|regular","top":"var:preset|spacing|regular","bottom":"var:preset|spacing|regular"},"blockGap":{"left":"0"},"margin":{"top":"0","bottom":"0"}}}} -->
+<div class="wp-block-columns" style="margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--regular);padding-right:var(--wp--preset--spacing--regular);padding-bottom:var(--wp--preset--spacing--regular);padding-left:var(--wp--preset--spacing--regular)"><!-- wp:column {"width":"25%","style":{"spacing":{"blockGap":"var:preset|spacing|regular","padding":{"right":"var:preset|spacing|x-small","left":"var:preset|spacing|x-small"}}}} -->
 <div class="wp-block-column" style="padding-right:var(--wp--preset--spacing--x-small);padding-left:var(--wp--preset--spacing--x-small);flex-basis:25%"><!-- wp:group {"style":{"position":{"type":"sticky","top":"0px"},"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"}},"border":{"radius":{"topLeft":"8px","topRight":"8px","bottomLeft":"8px","bottomRight":"8px"},"color":"#ffffff"}},"backgroundColor":"zk-alt-text","layout":{"type":"constrained"}} -->
-<div class="wp-block-group has-border-color has-zk-alt-text-background-color has-background" style="border-color:#ffffff;border-top-left-radius:8px;border-top-right-radius:8px;border-bottom-left-radius:8px;border-bottom-right-radius:8px;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0"><!-- wp:group {"style":{"spacing":{"padding":{"right":"var:preset|spacing|x-small","left":"var:preset|spacing|x-small","top":"var:preset|spacing|x-small"}}},"backgroundColor":"zk-alt-text","layout":{"type":"constrained"}} -->
-<div class="wp-block-group has-zk-alt-text-background-color has-background" style="padding-top:var(--wp--preset--spacing--x-small);padding-right:var(--wp--preset--spacing--x-small);padding-left:var(--wp--preset--spacing--x-small)"><!-- wp:search {"label":"Search","showLabel":false,"buttonText":"Search","buttonPosition":"button-inside","style":{"spacing":{"margin":{"top":"0","bottom":"0","left":"0","right":"0"}}}} /-->
-
-<!-- wp:group {"layout":{"type":"constrained"}} -->
-<div class="wp-block-group"><!-- wp:heading {"level":3} -->
-<h3 class="wp-block-heading">Categories</h3>
-<!-- /wp:heading -->
-
-<!-- wp:categories /--></div>
-<!-- /wp:group -->
-
-<!-- wp:group {"layout":{"type":"constrained"}} -->
-<div class="wp-block-group"><!-- wp:heading {"level":3} -->
-<h3 class="wp-block-heading">Recent Posts</h3>
-<!-- /wp:heading -->
-
-<!-- wp:latest-posts {"displayPostDate":true,"columns":2,"style":{"spacing":{"padding":{"top":"0","bottom":"0"}}}} /--></div>
-<!-- /wp:group -->
-
-<!-- wp:group {"layout":{"type":"constrained"}} -->
-<div class="wp-block-group"><!-- wp:heading {"level":3} -->
-<h3 class="wp-block-heading">Socials</h3>
-<!-- /wp:heading -->
-
-<!-- wp:social-links {"iconColor":"zk-primary","iconColorValue":"#e60000","className":"is-style-logos-only","layout":{"type":"flex","justifyContent":"left"}} -->
-<ul class="wp-block-social-links has-icon-color is-style-logos-only"><!-- wp:social-link {"url":"https://facebook.com","service":"facebook"} /-->
-
-<!-- wp:social-link {"url":"https://twitter.com","service":"x"} /-->
-
-<!-- wp:social-link {"url":"https://instagram.com","service":"instagram"} /-->
-
-<!-- wp:social-link {"url":"https://linkedin.com","service":"linkedin"} /--></ul>
-<!-- /wp:social-links --></div>
-<!-- /wp:group --></div>
-<!-- /wp:group -->
-
-<!-- wp:group {"style":{"spacing":{"blockGap":"0","padding":{"top":"var:preset|spacing|x-small","bottom":"var:preset|spacing|x-small"}},"border":{"radius":{"bottomLeft":"8px","bottomRight":"8px"}}},"backgroundColor":"zk-dark-background","layout":{"type":"constrained"}} -->
-<div class="wp-block-group has-zk-dark-background-background-color has-background" style="border-bottom-left-radius:8px;border-bottom-right-radius:8px;padding-top:var(--wp--preset--spacing--x-small);padding-bottom:var(--wp--preset--spacing--x-small)"><!-- wp:paragraph {"align":"center","style":{"elements":{"link":{"color":{"text":"var:preset|color|zk-alt-text"}}}},"textColor":"zk-alt-text"} -->
-<p class="has-text-align-center has-zk-alt-text-color has-text-color has-link-color">Make sure you...</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:heading {"textAlign":"center","level":3,"style":{"elements":{"link":{"color":{"text":"var:preset|color|zk-alt-text"}}}},"textColor":"zk-alt-text","fontSize":"big"} -->
-<h3 class="wp-block-heading has-text-align-center has-zk-alt-text-color has-text-color has-link-color has-big-font-size">Subscribe To <mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-zk-primary-color">TechGrill</mark></h3>
-<!-- /wp:heading --></div>
-<!-- /wp:group --></div>
+<div class="wp-block-group has-border-color has-zk-alt-text-background-color has-background" style="border-color:#ffffff;border-top-left-radius:8px;border-top-right-radius:8px;border-bottom-left-radius:8px;border-bottom-right-radius:8px;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0"><!-- wp:pattern { "slug":"zamkai-fse/sidebar" } /--></div>
 <!-- /wp:group --></div>
 <!-- /wp:column -->
 
 <!-- wp:column {"width":"75%"} -->
 <div class="wp-block-column" style="flex-basis:75%"><!-- wp:query {"queryId":15,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true,"taxQuery":null,"parents":[],"format":[]}} -->
-<div class="wp-block-query"><!-- wp:post-template -->
+<div class="wp-block-query"><!-- wp:post-template {"layout":{"type":"grid","columnCount":3}} -->
 <!-- wp:post-featured-image /-->
 
-<!-- wp:post-date {"metadata":{"bindings":{"datetime":{"source":"core/post-data","args":{"field":"date"}}}}} /-->
+<!-- wp:post-title {"level":3,"isLink":true,"style":{"spacing":{"margin":{"top":"0","bottom":"0"}}}} /-->
 
-<!-- wp:post-title /-->
+<!-- wp:post-date {"metadata":{"bindings":{"datetime":{"source":"core/post-data","args":{"field":"date"}}}}} /-->
 <!-- /wp:post-template -->
 
 <!-- wp:query-pagination {"paginationArrow":"chevron"} -->
