--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ Description: Theme from the Master kai
 Requires at least: 6.9
 Tested up to: 6.9
 Requires PHP: 5.7
-Version: 
+Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: zamkai-fse
-Tags: 
+Tags: full-site-editing, multi purpose theme, minimal
 */
 
