Page template addition

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 /*
 Theme Name: Zamkai FSE
-Theme URI: 
 Author: zamkaimaster
-Author URI: 
+Author URI: https://profiles.wordpress.org/zamkaimaster/
 Description: Theme from the Master kai
 Requires at least: 6.9
 Tested up to: 6.9
