Added main tags in templates for skip link

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,5 +1,7 @@
 <!-- wp:template-part {"slug":"header","theme":"zamkai-fse","area":"header"} /-->
 
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"default"}} -->
+<main class="wp-block-group" style="margin-top:0;margin-bottom:0">
 <!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"},"padding":{"top":"var:preset|spacing|large","bottom":"var:preset|spacing|large"}}},"backgroundColor":"zk-dark-background","layout":{"type":"constrained"}} -->
 <div class="wp-block-group has-zk-dark-background-background-color has-background" style="margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--large);padding-bottom:var(--wp--preset--spacing--large)"><!-- wp:query-title {"type":"archive","textAlign":"center","style":{"elements":{"link":{"color":{"text":"var:preset|color|zk-alt-text"}}}},"textColor":"zk-alt-text"} /-->
 
@@ -39,5 +41,6 @@
 <!-- /wp:query --></div>
 <!-- /wp:column --></div>
 <!-- /wp:columns -->
-
+</main>
+<!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","theme":"zamkai-fse","area":"footer"} /-->
