--- a/templates/single.html
+++ b/templates/single.html
@@ -1,5 +1,8 @@
 <!-- wp:template-part {"slug":"header","theme":"zamkai-fse","area":"header"} /-->
 
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"default"}} -->
+<main class="wp-block-group" style="margin-top:0;margin-bottom:0">
+
 <!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"},"padding":{"top":"var:preset|spacing|large","bottom":"var:preset|spacing|large"}}},"backgroundColor":"zk-dark-background","layout":{"type":"constrained"}} -->
 <div class="wp-block-group has-zk-dark-background-background-color has-background" style="margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--large);padding-bottom:var(--wp--preset--spacing--large)"><!-- wp:post-title {"textAlign":"center","level":1,"style":{"elements":{"link":{"color":{"text":"var:preset|color|zk-background"}}}},"textColor":"zk-background"} /-->
 
@@ -16,6 +19,7 @@
 <div class="wp-block-group" style="margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--regular);padding-right:0;padding-bottom:var(--wp--preset--spacing--regular);padding-left:0"><!-- wp:post-featured-image /-->
 
 <!-- wp:post-content /--></div>
+<!-- /wp:group --></main>
 <!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer","theme":"zamkai-fse","area":"footer"} /-->
