--- a/style.css
+++ b/style.css
@@ -2,7 +2,14 @@
 Theme Name: Zamkai FSE
 Author: zamkaimaster
 Author URI: https://profiles.wordpress.org/zamkaimaster/
-Description: Theme from the Master kai
+Description: Theme from the Zamkai Master, created with simplicity in mind. A perfect starting point for website creators that want a basic theme which won't tax their web server. 
+This theme has basic patterns and layouts that can help you jump start with basic WordPress blocks. The theme just defines templates, palettes and patterns. 
+No 'functions.php' here, I have left functionality to the plugins.
+
+Follow me on Twitter: https://x.com/sidgrill
+Subscribe to TechGrill: https://youtube.com/@TheTechGrill
+Subscribe to ThemeGrill: https://youtube.com/@ThemeGrillOfficial
+
 Requires at least: 6.9
 Tested up to: 6.9
 Requires PHP: 5.7
